--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -17,28 +17,16 @@
 
         <Button
             android:id="@+id/principal_btnMapa"
-            style="@style/ButtonBlue"
+            style="@style/ButtonEstilo"
+            android:background="@drawable/buttonblue"
             android:text="@string/btn_Mapa" />
 
         <Button
             android:id="@+id/principal_btnConta"
-            style="@style/ButtonGreen"
+            style="@style/ButtonEstilo"
+            android:background="@drawable/buttongreen"
             android:clickable="false"
             android:text="@string/btn_Conta" />
-    </LinearLayout>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/btn_Top">
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="kmk.gotraffic.view.Conta" />
     </LinearLayout>
 
 </RelativeLayout>
