--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,10 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="marginBottomComponents">40dp</dimen>
+    <dimen name="marginBottom">15dp</dimen>
 
-    <dimen name="marginBottomButtons">15dp</dimen>
-
-    <dimen name="textSize">14sp</dimen>
+    <dimen name="textPadrao">15sp</dimen>
+    <dimen name="textButton">15sp</dimen>
     <dimen name="textMin">10sp</dimen>
     <dimen name="textLogin">20sp</dimen>
 </resources>
