--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,24 +18,6 @@
         <item name="android:textSize">@dimen/textMin</item>
     </style>
 
-    <style name="ButtonGreen">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@color/green</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1.0</item>
-        <item name="android:textSize">@dimen/textSize</item>
-    </style>
-
-    <style name="ButtonBlue">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@color/blue</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1.0</item>
-        <item name="android:textSize">@dimen/textSize</item>
-    </style>
-
     <style name="AppTheme.Dark.Dialog.Hole" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
@@ -61,8 +43,15 @@
 
     <style name="EdtLoginEstilo">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/textSize</item>
+        <item name="android:textSize">@dimen/textPadrao</item>
         <item name="android:layout_marginBottom">@dimen/marginBottomComponents</item>
     </style>
 
+    <style name="ButtonEstilo">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1.0</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/textButton</item>
+    </style>
 </resources>
