Atualização da Activity Conta

--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +7,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmk.gotraffic.view.Conta">
+    tools:context="kmk.gotraffic.view.Conta"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/btn_Top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/marginBottom">
 
         <Button
             android:id="@+id/principal_btnMapa"
@@ -29,4 +31,15 @@
             android:text="@string/btn_Conta" />
     </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            style="@style/TxtLoginEstilo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NOME" />
+    </LinearLayout>
+
+</LinearLayout>
