--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="textButton">15sp</dimen>
     <dimen name="textMin">10sp</dimen>
     <dimen name="textLogin">20sp</dimen>
+    <dimen name="textConta">28sp</dimen>
 </resources>
