--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -3,19 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmk.gotraffic.view.Conta"
-    android:orientation="vertical">
+    tools:context="kmk.gotraffic.view.Conta">
 
     <LinearLayout
         android:id="@+id/btn_Top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="@dimen/marginBottom">
+        android:layout_weight="0.4">
 
         <Button
             android:id="@+id/principal_btnMapa"
@@ -29,17 +29,33 @@
             android:background="@drawable/buttongreen"
             android:clickable="false"
             android:text="@string/btn_Conta" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5">
+
+        <TextView
+            android:textSize="@dimen/textConta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thiago Fantin" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="4">
 
         <TextView
             style="@style/TxtLoginEstilo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NOME" />
+
     </LinearLayout>
 
 </LinearLayout>
