--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -14,8 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/marginBottom"
         android:layout_weight="3"
+        android:layout_marginBottom="@dimen/marginBottom"
         android:orientation="horizontal">
 
         <!--<Button-->
@@ -77,8 +77,8 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="kmk.gotraffic.view.Principal"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:context="kmk.gotraffic.view.Principal" />
 
     </LinearLayout>
 
@@ -86,7 +86,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/marginBottom"
         android:layout_weight="3"
         android:orientation="horizontal">
 
