--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/Principal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmk.gotraffic.view.Principal">
+    tools:context="kmk.gotraffic.controller.Principal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:layout_marginBottom="@dimen/marginBottom"
-        android:orientation="horizontal">
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_marginBottom="@dimen/marginBottom"-->
+    <!--android:layout_weight="1"-->
+    <!--android:orientation="horizontal">-->
 
-        <!--<Button-->
-        <!--android:id="@+id/principal_btnMapa"-->
-        <!--style="@style/ButtonGreen"-->
-        <!--android:text="@string/btn_Mapa" />-->
+    <!--&lt;!&ndash;<Button&ndash;&gt;-->
+    <!--&lt;!&ndash;android:id="@+id/principal_btnMapa"&ndash;&gt;-->
+    <!--&lt;!&ndash;style="@style/ButtonGreen"&ndash;&gt;-->
+    <!--&lt;!&ndash;android:text="@string/btn_Mapa" />&ndash;&gt;-->
 
-        <Button
-            style="@style/ButtonEstilo"
-            android:background="@drawable/buttongreen"
-            android:text="@string/btn_Mapa" />
+    <!--<Button-->
+    <!--style="@style/ButtonEstilo"-->
+    <!--android:background="@drawable/buttongreen"-->
+    <!--android:text="@string/btn_Mapa" />-->
 
-        <Button
-            style="@style/ButtonEstilo"
-            android:background="@drawable/buttonblue"
-            android:text="@string/btn_Conta" />
-        <!--<Button-->
-        <!--android:id="@+id/principal_btnConta"-->
-        <!--style="@style/ButtonBlue"-->
-        <!--android:text="@string/btn_Conta" />-->
+    <!--<Button-->
+    <!--style="@style/ButtonEstilo"-->
+    <!--android:background="@drawable/buttonblue"-->
+    <!--android:text="@string/btn_Conta" />-->
+    <!--&lt;!&ndash;<Button&ndash;&gt;-->
+    <!--&lt;!&ndash;android:id="@+id/principal_btnConta"&ndash;&gt;-->
+    <!--&lt;!&ndash;style="@style/ButtonBlue"&ndash;&gt;-->
+    <!--&lt;!&ndash;android:text="@string/btn_Conta" />&ndash;&gt;-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
     <!--<LinearLayout-->
     <!--android:layout_width="match_parent"-->
@@ -68,46 +65,75 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/marginBottom"
-        android:layout_weight="1">
-
+>
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:context="kmk.gotraffic.view.Principal" />
+            tools:context="kmk.gotraffic.controller.Principal" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/floatmenu"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_alignBottom="@id/floatmenu"
+        android:layout_centerHorizontal="true"
+        android:gravity="bottom"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/principal_btnMapeamento"
-            style="@style/ButtonEstilo"
-            android:background="@drawable/buttongreen"
-            android:text="@string/btn_Mapeamento" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab1"
+            style="@style/ButtonAcidente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_crash" />
 
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab2"
+            style="@style/ButtonCongestionamento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_traffic" />
 
-        <Button
-            android:id="@+id/principal_btnCheckIn"
-            style="@style/ButtonEstilo"
-            android:background="@drawable/buttonblue"
-            android:text="@string/btn_CheckIn" />
-
-        <Button
-            android:id="@+id/principal_btnNavegacao"
-            style="@style/ButtonEstilo"
-            android:background="@drawable/buttongreen"
-            android:text="@string/btn_Navegacao" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab3"
+            style="@style/ButtonBuraco"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_hole" />
 
     </LinearLayout>
 
-</LinearLayout>
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_weight="1"-->
+    <!--android:orientation="horizontal">-->
+
+    <!--<Button-->
+    <!--android:id="@+id/principal_btnMapeamento"-->
+    <!--style="@style/ButtonEstilo"-->
+    <!--android:background="@drawable/buttongreen"-->
+    <!--android:text="@string/btn_Mapeamento" />-->
+
+
+    <!--<Button-->
+    <!--android:id="@+id/principal_btnCheckIn"-->
+    <!--style="@style/ButtonEstilo"-->
+    <!--android:background="@drawable/buttonblue"-->
+    <!--android:text="@string/btn_CheckIn" />-->
+
+    <!--<Button-->
+    <!--android:id="@+id/principal_btnNavegacao"-->
+    <!--style="@style/ButtonEstilo"-->
+    <!--android:background="@drawable/buttongreen"-->
+    <!--android:text="@string/btn_Navegacao" />-->
+    <!--</LinearLayout>-->
+
+
+</RelativeLayout>
