MyLocation, DAO, Model, Inicio do Geofence.

--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmk.gotraffic.view.TelaLogin">
+    tools:context="kmk.gotraffic.controller.TelaLogin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
             style="@style/EdtLoginEstilo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberPassword" />
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
