--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmk.gotraffic.view.Conta">
+    tools:context="kmk.gotraffic.controller.Conta">
 
     <LinearLayout
         android:id="@+id/btn_Top"
