--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,4 +54,44 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/textButton</item>
     </style>
+
+
+    <style name="MenuLabelsStyle">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="MenuButtonsStyle">
+        <item name="fab_size">mini</item>
+        <item name="fab_showAnimation">@anim/jump_from_down</item>
+        <item name="fab_hideAnimation">@anim/jump_to_down</item>
+        <item name="fab_shadowColor">#444</item>
+        <item name="fab_colorNormal">#FFB805</item>
+        <item name="fab_colorPressed">#F2AB00</item>
+        <item name="fab_colorRipple">#D99200</item>
+    </style>
+
+    <style name="ButtonAcidente">
+        <item name="fab_size">normal</item>
+        <item name="fab_colorNormal">#c01520</item>
+        <item name="fab_colorPressed">#cd222b</item>
+        <item name="fab_colorRipple">#ff6265</item>
+    </style>
+
+    <style name="ButtonBuraco">
+        <item name="fab_colorNormal">#43A047</item>
+        <item name="fab_colorPressed">#2E7D32</item>
+        <item name="fab_colorRipple">#1B5E20</item>
+    </style>
+
+    <style name="ButtonCongestionamento">
+        <item name="fab_size">normal</item>
+        <item name="fab_colorNormal">#156bc0</item>
+        <item name="fab_colorPressed">#2269cd</item>
+        <item name="fab_colorRipple">#62c3ff</item>
+    </style>
+
 </resources>
