--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmk.gotraffic.controller.Conta">
+    tools:context=".ContaActivity">
 
     <LinearLayout
         android:id="@+id/btn_Top"
@@ -51,7 +51,7 @@
         android:layout_weight="4">
 
         <TextView
-            style="@style/TxtLoginEstilo"
+            style="@style/TxtEstilo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NOME" />
