--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,39 +9,39 @@
         <item name="android:alertDialogTheme">@style/AppTheme.Dark.Dialog.Hole</item>
     </style>
 
+    <style name="AppTheme.Dark.Dialog.Hole" parent="Theme.AppCompat.Dialog">
+    <item name="colorAccent">@color/white</item>
+    <item name="android:textColorPrimary">@color/white</item>
+    <item name="android:background">@color/bg_hole</item>
+    </style>
+
+    <style name="AppTheme.Dark.Dialog.Crash" parent="Theme.AppCompat.Dialog">
+    <item name="colorAccent">@color/white</item>
+    <item name="android:textColorPrimary">@color/white</item>
+    <item name="android:background">@color/bg_crash</item>
+    </style>
+
+    <style name="AppTheme.Dark.Dialog.Traffic" parent="Theme.AppCompat.Dialog">
+    <item name="colorAccent">@color/white</item>
+    <item name="android:textColorPrimary">@color/white</item>
+    <item name="android:background">@color/bg_traffic</item>
+    </style>
+
     <style name="ButtonGray">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/dark_gray</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1.0</item>
-        <item name="android:textSize">@dimen/textMin</item>
+        <item name="android:textSize">@dimen/textMinimo</item>
     </style>
 
-    <style name="AppTheme.Dark.Dialog.Hole" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:background">@color/bg_hole</item>
-    </style>
-
-    <style name="AppTheme.Dark.Dialog.Crash" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:background">@color/bg_crash</item>
-    </style>
-
-    <style name="AppTheme.Dark.Dialog.Traffic" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:background">@color/bg_traffic</item>
-    </style>
-
-    <style name="TxtLoginEstilo">
+    <style name="TxtEstilo">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/textLogin</item>
     </style>
 
-    <style name="EdtLoginEstilo">
+    <style name="EdtEstilo">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/textPadrao</item>
         <item name="android:layout_marginBottom">@dimen/marginBottomComponents</item>
@@ -53,25 +53,6 @@
         <item name="android:layout_weight">1.0</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/textButton</item>
-    </style>
-
-
-    <style name="MenuLabelsStyle">
-        <item name="android:background">@drawable/fab_label_background</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:maxLines">2</item>
-        <item name="android:ellipsize">end</item>
-    </style>
-
-    <style name="MenuButtonsStyle">
-        <item name="fab_size">mini</item>
-        <item name="fab_showAnimation">@anim/jump_from_down</item>
-        <item name="fab_hideAnimation">@anim/jump_to_down</item>
-        <item name="fab_shadowColor">#444</item>
-        <item name="fab_colorNormal">#FFB805</item>
-        <item name="fab_colorPressed">#F2AB00</item>
-        <item name="fab_colorRipple">#D99200</item>
     </style>
 
     <style name="ButtonAcidente">
@@ -93,5 +74,4 @@
         <item name="fab_colorPressed">#2269cd</item>
         <item name="fab_colorRipple">#62c3ff</item>
     </style>
-
 </resources>
