--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -7,15 +7,6 @@
     android:orientation="vertical"
     tools:context=".PrincipalActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/textview1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +30,12 @@
         android:layout_centerHorizontal="true"
         android:gravity="bottom"
         android:orientation="horizontal">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/principal_btnConta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_user" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/principal_btnAcidente"
